--- a/src/App.scss
+++ b/src/App.scss
@@ -1,47 +1,3 @@
-.header {
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-top: 50px;
-  .description {
-    text-align: left;
-    line-height: 28px;
-    margin-top: 20px;
-    font-size: 20px;
-    max-width: 800px;
-    color: var(--text100);
-  }
-  .quote {
-    margin-top: 15px;
-    margin-bottom: 15px;
-    line-height: 28px;
-    font-size: 15px;
-    max-width: 800px;
-    color: var(--text100);
-    text-align: left;
-  }
-  .HeaderButton {
-    margin-top: 10px;
-  }
-  .title {
-    font-weight: 700;
-    font-size: 35px;
-    text-align: left;
-    color: var(--text100);
-  }
-}
-
-h1 {
-  color: var(--text100);
-  font-size: 45px;
-}
-
-h3 {
-  color: var(--text100);
-}
-
 // Font
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap");
 * {
@@ -52,7 +8,7 @@ h3 {
 :root {
   // Text
   --text100: #d5d5d5;
-  --text200: #a7a8a8;
+  --text200: #cbcbcb;
   --text300: #696969;
   --text400: #262626;
 
@@ -91,40 +47,100 @@ h3 {
   // Transition
   --transition: all 0.2s ease-in-out;
 }
-
-/* On screens that are 600px wide or less, make the menu links stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .logo {
+    color: var(--text100);
+    margin-top: 40px;
+    font-size: 14px;
+  }
   .header {
     padding: 10px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: left;
-    margin-top: 50px;
+    align-items: center;
+    justify-content: center;
+    margin-top: 70px;
+
     .description {
-      text-align: left;
+      text-align: center;
       line-height: 28px;
-      margin-top: 20px;
+      margin: 30px 0px;
       font-size: 20px;
-      max-width: 750px;
+      max-width: 655px;
       color: var(--text100);
-    }
-    .quote {
-      margin-top: 15px;
-      margin-bottom: 15px;
-      line-height: 28px;
-      font-size: 15px;
-      color: var(--text100);
-      text-align: left;
-    }
-    .HeaderButton {
-      margin-top: 10px;
     }
     .title {
       font-weight: 700;
-      font-size: 35px;
-      text-align: left;
-      color: var(--text100);
+      font-size: 150px;
+      color: #f5f5f5;
+    }
+    .HeaderButton {
+      margin-bottom: 30px;
+    }
+  }
+
+  .CityWrapper {
+    display: flex;
+    align-items: center;
+    max-width: 700px;
+  }
+  .categoryWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 700px;
+  }
+}
+
+h1 {
+  color: var(--text100);
+  font-size: 45px;
+}
+
+h3 {
+  color: var(--text100);
+}
+
+/* On screens that are 600px wide or less, make the menu links stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    .logo {
+      margin-left: 10px;
+    }
+    .header {
+      padding: 10px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: left;
+      margin-top: 10px;
+      .description {
+        text-align: left;
+        line-height: 28px;
+        margin-top: 20px;
+        font-size: 20px;
+        max-width: 750px;
+        color: var(--text100);
+      }
+
+      .HeaderButton {
+        margin-top: 10px;
+      }
+      .title {
+        font-weight: 700;
+        font-size: 75px;
+        text-align: left;
+        color: var(--text100);
+      }
+    }
+    .categoryWrapper {
+      padding: 10px;
     }
   }
 }
