--- a/src/App.scss
+++ b/src/App.scss
@@ -18,9 +18,10 @@
   --bg300: #1e1e1e;
 
   // Primary
-  --primary: #796aff;
-  --primary70: #796aff70;
-  --primary20: #796aff20;
+  --primary: #ff6a6a;
+  --primary70: #ff6a6a70;
+  --primary20: #ff6a6a20;
+  --primary95: #ff6a6a95;
 
   // Shadow
   --dropShadow: 0px 3px 5px 0px #00000020;
@@ -68,7 +69,7 @@
       text-align: center;
       line-height: 28px;
       margin: 30px 0px;
-      font-size: 20px;
+      font-size: 18px;
       max-width: 655px;
       color: var(--text100);
     }
@@ -82,14 +83,20 @@
     }
   }
 
-  .CityWrapper {
+  .dropdownWrapper {
     display: flex;
-    align-items: center;
-    max-width: 700px;
-    > div {
-      margin: 5px;
+    flex-direction: column;
+    .cityWrapper {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      max-width: 700px;
+      > div {
+        margin: 5px;
+      }
     }
   }
+
   .categoryWrapper {
     display: flex;
     flex-direction: column;
@@ -105,6 +112,11 @@ h1 {
 
 h3 {
   color: var(--text100);
+}
+
+a {
+  text-decoration: none;
+  color: var(--primary);
 }
 
 /* On screens that are 600px wide or less, make the menu links stack on top of each other instead of next to each other */
@@ -141,6 +153,13 @@ h3 {
         text-align: left;
         color: var(--text100);
       }
+    }
+    .cityWrapper {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      max-width: 700px;
+      margin-left: 10px;
     }
     .categoryWrapper {
       padding: 10px;
